[gd_scene load_steps=22 format=3 uid="uid://b3kdvbeuw4nh5"]

[ext_resource type="Script" path="res://battlesim/nexus/nexus.gd" id="1_4gx4f"]
[ext_resource type="Texture2D" uid="uid://cnthng11d3aww" path="res://assets/art/map/enemy_nexus.png" id="1_xheii"]
[ext_resource type="Resource" uid="uid://cv47v3cpcwq0q" path="res://resources/projectiles/nexus_projectile.tres" id="2_nibyx"]
[ext_resource type="Script" path="res://battlesim/components/hurt_box_component.gd" id="2_qmxlh"]
[ext_resource type="Script" path="res://battlesim/components/hitbox_component.gd" id="3_lx534"]
[ext_resource type="Script" path="res://battlesim/components/stats_component.gd" id="5_1xmsr"]
[ext_resource type="Script" path="res://battlesim/components/nexus_healing_component.gd" id="5_s53iw"]
[ext_resource type="Script" path="res://battlesim/components/damage_numbers_component.gd" id="6_vfdnc"]
[ext_resource type="Script" path="res://battlesim/components/flash_component.gd" id="7_nu51a"]
[ext_resource type="Script" path="res://battlesim/components/attack_component.gd" id="8_och41"]
[ext_resource type="Script" path="res://battlesim/components/state_machine_component.gd" id="9_lwib2"]
[ext_resource type="Script" path="res://battlesim/states/structure_state.gd" id="10_du3fc"]
[ext_resource type="Script" path="res://battlesim/components/health_bar_component.gd" id="11_ab8tg"]
[ext_resource type="Script" path="res://battlesim/components/death_component.gd" id="12_732pu"]
[ext_resource type="Script" path="res://battlesim/components/juice_component.gd" id="12_m8d28"]
[ext_resource type="PackedScene" uid="uid://cottssx1s1fc1" path="res://battlesim/components/attack_progress_bar_component.tscn" id="13_tidby"]
[ext_resource type="Script" path="res://battlesim/components/new_game_component.gd" id="14_14sjn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fxgb8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ph57b"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gi2bm"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_a0luf"]
radius = 50.0

[node name="Nexus" type="StaticBody2D"]
script = ExtResource("1_4gx4f")
actor_projectile = ExtResource("2_nibyx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fxgb8")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_xheii")

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("stats_component", "state_machine_component")]
collision_layer = 0
collision_mask = 0
script = ExtResource("2_qmxlh")
stats_component = NodePath("../StatsComponent")
state_machine_component = NodePath("../StateMachineComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_ph57b")
debug_color = Color(0.960784, 0, 0, 0.419608)

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("3_lx534")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_gi2bm")

[node name="NexusHealingComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("5_s53iw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NexusHealingComponent"]
shape = SubResource("CircleShape2D_a0luf")
debug_color = Color(0.363395, 0.608513, 0.295636, 0.42)

[node name="StatsComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_1xmsr")
actor = NodePath("..")
damage = 25.0
move_speed = 0.0
att_speed = 0.2
health = 5000.0

[node name="DamageNumbersComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "hurtbox_Component")]
script = ExtResource("6_vfdnc")
actor = NodePath("..")
hurtbox_Component = NodePath("../HurtboxComponent")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("hurtbox_component", "sprite")]
script = ExtResource("7_nu51a")
hurtbox_component = NodePath("../HurtboxComponent")
sprite = NodePath("../Sprite2D")

[node name="AttackComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "hitbox_component", "stats_component")]
script = ExtResource("8_och41")
actor = NodePath("..")
hitbox_component = NodePath("../HitboxComponent")
stats_component = NodePath("../StatsComponent")

[node name="HealthBarComponent" type="ProgressBar" parent="." node_paths=PackedStringArray("stats_component")]
offset_right = 4.0
offset_bottom = 22.0
script = ExtResource("11_ab8tg")
stats_component = NodePath("../StatsComponent")

[node name="DeathComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "hurtbox_component")]
script = ExtResource("12_732pu")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="JuiceComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor", "attack_component", "death_component")]
script = ExtResource("12_m8d28")
actor = NodePath("..")
attack_component = NodePath("../AttackComponent")
death_component = NodePath("../DeathComponent")

[node name="AttackProgressBarComponent" parent="." node_paths=PackedStringArray("attack_component", "hitbox_component") instance=ExtResource("13_tidby")]
offset_left = 55.0
offset_top = -55.0
offset_right = 311.0
offset_bottom = 201.0
attack_component = NodePath("../AttackComponent")
hitbox_component = NodePath("../HitboxComponent")

[node name="StateMachineComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "initial_state", "health_bar_component")]
script = ExtResource("9_lwib2")
actor = NodePath("..")
initial_state = NodePath("StructureState")
health_bar_component = NodePath("../HealthBarComponent")

[node name="StructureState" type="Node" parent="StateMachineComponent" node_paths=PackedStringArray("actor", "stats_component", "attack_component", "hitbox_component")]
script = ExtResource("10_du3fc")
actor = NodePath("../..")
stats_component = NodePath("../../StatsComponent")
attack_component = NodePath("../../AttackComponent")
hitbox_component = NodePath("../../HitboxComponent")

[node name="NewGameComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("14_14sjn")
actor = NodePath("..")
